# gy-crawler

./: .gitignore  README.md  download_video.py  fb_reels_list.md  pyproject.toml
docs/plans/: 2026-03-13-mp3-analysis-design.md  2026-03-13-mp3-analysis-plan.md  2026-03-14-facebook-reels-json-design.md  2026-03-14-facebook-reels-json-export.md  2026-03-14-facebook-reels-social-video-record-design.md  2026-03-14-facebook-reels-social-video-record-plan.md  2026-03-14-repo-structure-design.md  2026-03-14-repo-structure-plan.md  2026-03-15-facebook-all-visible-design.md  2026-03-15-facebook-all-visible-plan.md  2026-03-15-facebook-login-session-design.md  2026-03-15-facebook-login-session-plan.md
notebooks/: exploration.ipynb
scripts/: _bootstrap.py  download_reels.py  facebook_login_session.py  facebook_reels_analyze.py  facebook_reels_export.py  podcast_episode_analyze.py  podcast_feed_download.py
src/gy_crawler/cli/: main.py
src/gy_crawler/sources/facebook/reels/: analyzer.py  cli.py  collector.py  downloader.py  models.py  parser.py  paths.py
src/gy_crawler/sources/podcast/episodes/: analyzer.py
src/gy_crawler/sources/podcast/feeds/: downloader.py
tests/unit/: test_cli_main.py  test_script_bootstrap.py
tests/unit/facebook/: test_login_session.py  test_reels_cli.py
tests/unit/podcast/: test_episode_analyzer.py
