[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gy-crawler"
version = "0.1.0"
description = "Multi-source crawler workspace for podcast, social, and news scraping."
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.58.0",
  "requests>=2.31.0",
  "yt-dlp>=2024.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
